* Holding down ALT key while selecting or deselecting units will now add/remove 10 units at a time. (veqryn)
* Possible fix for battle window disappearing after closing, with battle panel not becoming visible again. (frigoref)

git-svn-id: https://svn.code.sf.net/p/triplea/code/trunk/triplea@3523 a4c711aa-641f-0410-879d-9b464e52b682